Picture, SEO, and version updates

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Lincoln Pediatrics Website"
+      content="Lincoln Pediatrics is a pediatrics office run by Dr. Adam Sergiwa. Lincoln Pediatrics has an office location in LaPorte, Indiana and Michigan City, Indiana."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -19,7 +19,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cabin&family=Raleway:wght@300&family=Work+Sans&display=swap" rel="stylesheet">
-
 
     <title>Lincoln Pediatrics</title>
   </head>
